--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                     >Aula Prática 001</a
                 >
             </p>
+            <p>
+                <a href="./aulas/ex002/"
+                    >Aula Prática 002</a
+                >
+            </p>
             <h2>Desafios em JavaScript</h2>
             <p><a href="">Aguardando Novos Desafios</a></p>
         </main>
