--- a/index.html
+++ b/index.html
@@ -13,99 +13,64 @@
     <body>
         <main>
             <h1>&#X1F310; SITE HELLO JAVASCRIPT</h1>
-            <img
-                class="foto"
-                src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Javascript_Logo.png"
-                alt="logo javascript"
-            />
+            <img class="foto" src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Javascript_Logo.png" alt="logo javascript" />
             <h2 style="text-align: center">Quem sou eu?</h2>
             <div>
                 <p>
-                    Meu nome é <strong>Marcelo I Campos</strong>, sou estudante
-                    aficionado de HTML, CSS e JAVASCRIPT. Aprendendo (aos 40
-                    anos de vida) a programar e desenvolver. Veja meus estudos
-                    nos links abaixo e obrigado!
+                    Meu nome é <strong>Marcelo I Campos</strong>, sou estudante aficionado de HTML, CSS e JAVASCRIPT. Aprendendo (aos 40 anos de vida) a
+                    programar e desenvolver. Veja meus estudos nos links abaixo e obrigado!
                 </p>
             </div>
             <p>
                 &gt; SOBRE quem sou eu
-                <a href="https://marceloicampos.com/about" target="_blank">
-                    CLIQUE AQUI</a
-                >
+                <a href="https://marceloicampos.com/about" target="_blank"> CLIQUE AQUI</a>
             </p>
             <p>
-                <img
-                    class="logo"
-                    src="./imagens/icone_arroba.png"
-                    alt="ícone arroba de e-Mail"
-                />
+                <img class="logo" src="./imagens/icone_arroba.png" alt="ícone arroba de e-Mail" />
                 Meu e-Mail marceloicampos@outlook.com &gt; &gt; &gt;
-                <a href="mailto:marceloicampos@outlook.com">
-                    mande um e-Mail pra mim clicando aqui.</a
-                >
+                <a href="mailto:marceloicampos@outlook.com"> mande um e-Mail pra mim clicando aqui.</a>
             </p>
             <h1>Aulas em JavaScript</h1>
             <h2>Exercícios em Aulas</h2>
             <p>
-                <a href="./aulas/aula04/ex001.html"
-                    >Aula 04 - Ex001 - Hello World</a
-                >
+                <a href="./aulas/aula04/ex001.html">Aula 04 - Ex001 - Hello World</a>
             </p>
             <p>
-                <a href="./aulas/aula05/ex002.html"
-                    >Aula 05 - Ex002 - Variáveis e Tipos Primitivos</a
-                >
+                <a href="./aulas/aula05/ex002.html">Aula 05 - Ex002 - Variáveis e Tipos Primitivos</a>
             </p>
             <p>
-                <a href="./aulas/aula06/ex003.html"
-                    >Aula 06 - Ex003 - Tratamentos de Dados</a
-                >
+                <a href="./aulas/aula06/ex003.html">Aula 06 - Ex003 - Tratamentos de Dados</a>
             </p>
             <p>
-                <a href="./aulas/aula06/ex004.html"
-                    >Aula 06 - Ex004 - Strings and Numbers</a
-                >
+                <a href="./aulas/aula06/ex004.html">Aula 06 - Ex004 - Strings and Numbers</a>
             </p>
             <p>
-                <a href="./aulas/aula07/ex005.html"
-                    >Aula 07 - Ex005 - Operadores - Parte 01</a
-                >
+                <a href="./aulas/aula07/ex005.html">Aula 07 - Ex005 - Operadores - Parte 01</a>
             </p>
             <p>
-                <a href="./aulas/aula08/ex006.html"
-                    >Aula 08 - Ex006 - Operadores - Parte 02</a
-                >
+                <a href="./aulas/aula08/ex006.html">Aula 08 - Ex006 - Operadores - Parte 02</a>
             </p>
             <p>
-                <a href="./aulas/aula09/ex007.html"
-                    >Aula 09 - Ex007 - Introdução ao DOM - Parte 01</a
-                >
+                <a href="./aulas/aula09/ex007.html">Aula 09 - Ex007 - Introdução ao DOM - Parte 01</a>
             </p>
             <p>
-                <a href="./aulas/aula10/ex008.html"
-                    >Aula 10 - Ex008 - Eventos no DOM - Parte 02</a
-                >
+                <a href="./aulas/aula10/ex008.html">Aula 10 - Ex008 - Eventos no DOM - Parte 02</a>
             </p>
             <p>
-                <a href="./aulas/aula11/ex009.html"
-                    >Aula 11 - Ex009 - Condições - Parte 01</a
-                >
+                <a href="./aulas/aula11/ex009.html">Aula 11 - Ex009 - Condições - Parte 01</a>
             </p>
             <p>
-                <a href="./aulas/aula12/ex010.html"
-                    >Aula 12 - Ex010 - Condições - Parte 02</a
-                >
+                <a href="./aulas/aula12/ex010.html">Aula 12 - Ex010 - Condições - Parte 02</a>
+            </p>
+            <p>
+                <a href="./aulas/aula13/ex011.html">Aula 13 - Ex011 - Repetições - Parte 01</a>
             </p>
             <h2>Exercícios em JavaScript</h2>
             <p>
-                <a href="./aulas/ex001/"
-                    >Aula Prática 001</a
-                >
+                <a href="./aulas/ex001/">Aula Prática 001</a>
             </p>
             <p>
-                <a href="./aulas/ex002/"
-                    >Aula Prática 002</a
-                >
+                <a href="./aulas/ex002/">Aula Prática 002</a>
             </p>
             <h2>Desafios em JavaScript</h2>
             <p><a href="">Aguardando Novos Desafios</a></p>
@@ -115,9 +80,7 @@
             <footer>
                 <p>
                     Estudos em HTML5, CSS3 E JAVASCRIPT por
-                    <a href="https://marceloicampos.com/about" target="_blank"
-                        >Marcelo Ildefonso Campos</a
-                    >
+                    <a href="https://marceloicampos.com/about" target="_blank">Marcelo Ildefonso Campos</a>
                 </p>
             </footer>
         </div>
